--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>{{project_title}}</title>
-  <meta name="description" content="{{project_tagline}}">
+  <title>r3pwn</title>
+  <meta name="description" content="My little blog">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -22,10 +22,10 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">{{project_title}}</h1>
+      <h1 class="title">r3pwn</h1>
     </header>
     <div id="container">
-      <p class="tagline">{{project_tagline}}</p>
+      <p class="tagline">My little blog</p>
       <div id="main" role="main">
 <!--    <div class="download-bar">
         <div class="inner">
@@ -44,13 +44,9 @@
     </div>
     <footer>
       <div class="owner">
-      {{#project_page?}}
-      <p><a href="{{owner_url}}" class="avatar"><img src="{{owner_gravatar_url}}" width="48" height="48"/></a> <a href="{{owner_url}}">{{owner_name}}</a> maintains <a href="{{github_url}}">{{project_title}}</a></p>
-      {{/project_page?}}
+      <p><a href="http://github.com/r3pwn" class="avatar"><img src="https://avatars2.githubusercontent.com/u/4053609?u=a9581385f31c718676fe95b9cf1a0294f57b9ca3&s=140" width="48" height="48"/></a> <a href="github.com/r3pwn">r3pwn</a> is a 15 year-old that loves computers, technology, and anything related to security.</p>
 
-       {{#user_page?}}
-      <p><a href="{{owner_url}}" class="avatar"><img src="{{owner_gravatar_url}}" width="48" height="48"/></a>View <a href="{{owner_url}}">{{owner_name}}</a> on <a href="https://www.github.com">GitHub</a></p>
-      {{/user_page?}}
+      <p><a href="http://github.com/r3pwn" class="avatar"><img src="https://avatars2.githubusercontent.com/u/4053609?u=a9581385f31c718676fe95b9cf1a0294f57b9ca3&s=140" width="48" height="48"/></a>View <a href="http://github.com/r3pwn">r3pwn</a> on <a href="https://www.github.com">GitHub</a></p>
 
       </div>
       <div class="creds">
@@ -58,12 +54,12 @@
       </div>
     </footer>
   </div>
-  <div class="current-section">
+<!--  <div class="current-section">
     <a href="#top">Scroll to top</a>
     <a href="{{tar_url}}" class="tar">tar</a><a href="{{zip_url}}" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
-  {{{google_analytics}}}
+  {{{google_analytics}}} -->
 </body>
 </html>
