I'm done for the day.

--- a/index.html
+++ b/index.html
@@ -38,14 +38,12 @@
         <span class="blc"></span><span class="trc"></span>
         </div> -->
         <article class="markdown-body">
-          {{{main_content}}}
+          Content (yes, meaning a  blog) will appear here in the future...
         </article>
       </div>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="http://github.com/r3pwn" class="avatar"><img src="https://avatars2.githubusercontent.com/u/4053609?u=a9581385f31c718676fe95b9cf1a0294f57b9ca3&s=140" width="48" height="48"/></a> <a href="github.com/r3pwn">r3pwn</a> is a 15 year-old that loves computers, technology, and anything related to security.</p>
-
       <p><a href="http://github.com/r3pwn" class="avatar"><img src="https://avatars2.githubusercontent.com/u/4053609?u=a9581385f31c718676fe95b9cf1a0294f57b9ca3&s=140" width="48" height="48"/></a>View <a href="http://github.com/r3pwn">r3pwn</a> on <a href="https://www.github.com">GitHub</a></p>
 
       </div>
