--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
       <p class="tagline">Page not found</p>
       <div id="main" role="main">
         <article class="markdown-body">
-          <h3>I'm afraid the page you are looking for either does not exist or was swallowed whole by strange creatures of an unknown origin.</h3>
+          I'm afraid the page you are looking for either does not exist or was swallowed whole by strange creatures of an unknown origin.
         </article>
       </div>
     </div>
