--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
       </div>
       <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a> and hosted by <a href="http://freedns.afraid.org">FreeDNS</a>.</small>
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a>.</small>
       </div>
     </footer>
   </div>
