Stalk me, I don't care.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="http://github.com/r3pwn" class="avatar"><img src="https://avatars2.githubusercontent.com/u/4053609?u=a9581385f31c718676fe95b9cf1a0294f57b9ca3&s=140" width="48" height="48"/></a>View <a href="http://github.com/r3pwn">r3pwn</a> on <a href="https://www.github.com">GitHub</a></p>
+      <p><a href="http://github.com/r3pwn" class="avatar"><img src="https://avatars2.githubusercontent.com/u/4053609?u=a9581385f31c718676fe95b9cf1a0294f57b9ca3&s=140" width="48" height="48"/></a>View <a href="http://github.com/r3pwn">r3pwn</a> on <a href="https://www.github.com">GitHub</a>, <a href="https://plus.google.com/+GregWillardr3pwn">Google+</a>, or <a href="http://www.twitter.com/r3pwn">Twitter</a>.
+	  </p>
 
       </div>
       <div class="creds">
