--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
     </div>
     <footer>
       <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a> and hosted by <a href="http://freedns.afraid.org">FreeDNS</a>.</small>
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a>.</small>
       </div>
     </footer>
   </div>
