--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		  <br>Enter ".help" for instructions
 		  <br>Enter SQL statements terminated with a ";"
 		  <br>sqlite> insert into overrides (name, value) VALUES ('finsky.debug_options_enabled', 'true');
-		  <br>sqlite> 
+		  <br>sqlite> .exit
 		  <br>root@flo:/data/data/com.google.android.gsf/databases # reboot
 		  <br>
 		  <br>That should enable Google Play Store Debug Settings. Feel free to do that with the other values before rebooting. 
