--- a/browser.html
+++ b/browser.html
@@ -23,6 +23,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-<div style="background-image:url(images/bgtile.png);"></div>
+<div style="background-image:url(http://r3pwn.github.io/images/bgtile.png);"></div>
 </body>
 </html>
