because its over 9000

--- a/browser.html
+++ b/browser.html
@@ -20,9 +20,9 @@
 
   <title>r3pwn</title>
   <meta name="description" content="Browser Main Page">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
-<div style="background-image:url(http://r3pwn.github.io/images/bgtile.png);"></div>
+<div style="background-image:url(http://r3pwn.github.io/images/bgtile.png);width:9001px;height:9001px;"></div>
 </body>
 </html>
