--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 
   <title>r3pwn</title>
   <meta name="description" content="My little blog">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 
 <body>
