--- a/browser.html
+++ b/browser.html
@@ -23,6 +23,6 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
-<div style="background-image:url(http://r3pwn.github.io/images/bgtile.png);width:9001px;height:9001px;"></div>
+<div style="background-image:url(http://r3pwn.github.io/images/bgtile.png);width:device-width;height:device-height;alpha:50%;"></div>
 </body>
 </html>
