--- a/browser.html
+++ b/browser.html
@@ -23,6 +23,8 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
-<div style="background-image:url(http://r3pwn.github.io/images/bgtile.png);alpha:50%;background-size:auto 100%"></div>
+<div class="bgimagealphacontainer">
+  <div class="content"></div>
+</div>
 </body>
 </html>
