--- a/browser.html
+++ b/browser.html
@@ -4,8 +4,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <!-- <link rel="stylesheet" href="stylesheets/pygment_trac.css"/> -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
   <script>
@@ -17,6 +15,13 @@
     ga('require', 'displayfeatures');
     ga('send', 'pageview');
   </script>
+  <style>
+  body
+  {
+    background-image:url('http://r3pwn.github.io/images/bgtile.png');
+    background-repeat:repeat-y|repeat-x;
+  }
+  </style>
 
   <title>r3pwn</title>
   <meta name="description" content="Browser Main Page">
