--- a/browser.html
+++ b/browser.html
@@ -28,6 +28,6 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
-
+<CENTER><IMG SRC='http://r3pwn.github.io/images/google.png'></CENTER>
 </body>
 </html>
