Ooh! It's a line!

--- a/browser.html
+++ b/browser.html
@@ -29,5 +29,6 @@
 </head>
 <body>
 <CENTER><IMG SRC='http://r3pwn.github.io/images/google.png'></CENTER>
+<hr align="center" color="#005A5A" size="3">
 </body>
 </html>
