--- a/browser.html
+++ b/browser.html
@@ -28,7 +28,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
-<CENTER><IMG href="http://www.google.com/" SRC='http://r3pwn.github.io/images/google.png'></CENTER>
+<CENTER><a href="http://www.google.com/"><IMG SRC='http://r3pwn.github.io/images/google.png' border='0'></a></CENTER>
 <hr align="center" color="#005A5A" size="3">
 </body>
 </html>
