--- a/sourcemodding.html
+++ b/sourcemodding.html
@@ -46,11 +46,17 @@ Now it's time for the final step. Permissions changing. Hook up your SHIELD via 
 <br>chown 5dn */*
 <br>chown 5dn */*/*
 <br>chown 5dn */*/*/*
+<br>chown 5dn */*/*/*/*
+<br>chown 5dn */*/*/*/*/*
 <br>chgrp 5dn *
 <br>chgrp 5dn */*
 <br>chgrp 5dn */*/*
-<br>chgrp 5dn */*/*/*</i>
+<br>chgrp 5dn */*/*/*
+<br>chgrp 5dn */*/*/*/*
+<br>chgrp 5dn */*/*/*/*/*
+</i>
 <br>
+<b>(It's oky if one or more of those commands gives an error of "No such file or directoy".)</b>
 <br>
 After that, your permissions should be fixed. Start up the game and see if anything looks/functions any different!
 <br>
