--- a/sourcemodding.html
+++ b/sourcemodding.html
@@ -56,7 +56,7 @@ Now it's time for the final step. Permissions changing. Hook up your SHIELD via 
 <br>chgrp 5dn */*/*/*/*/*
 </i>
 <br>
-<b>(It's oky if one or more of those commands gives an error of "No such file or directoy".)</b>
+<b>(It's okay if one or more of those commands gives an error of "No such file or directory".)</b>
 <br>
 After that, your permissions should be fixed. Start up the game and see if anything looks/functions any different!
 <br>
