--- a/gkeys.html
+++ b/gkeys.html
@@ -48,15 +48,16 @@
     <div id="headerMenu" class="yui3-menu yui3-menu-open yui3-menu-horizontal yui3-menu-fixed">
         <span class="yui3-menu-heading">PrettyPages</span>
         <ul>
-            <li class="yui3-menu-active"><a href="http://tilomitra.github.com/cssforms/">Documentation</a></li>
-            <li><a href="http://github.com/tilomitra/prettypages/">Fork on Github</a></li>
-            <li><a href="http://github.com/tilomitra/">Other Projects</a></li>
+            <li><a href="http://r3pwn.github.io/">My Blog</a></li>
+            <li><a href="https://plus.google.com/+GregWillardr3pwn">My Google+</a></li>
+            <li><a href="http://www.twitter.com/r3pwn">My Twitter</a></li>
+            <li class="yui3-menu-active"><a href="http://r3pwn.github.io/gkeys.html">Play Services Keys</a></li>
         </ul>
     </div>
     <div class="header yui3-u-1">
 
-        <h1 class="yui3-u-1">Pretty Pages</h1>
-        <h2 class="yui3-u">A pretty Github Pages template</h2>
+        <h1 class="yui3-u-1">Google Play Services Keys</h1>
+        <h2 class="yui3-u">A listing of my findings of Google Play Services Framework "overrides" database values.</h2>
 
     </div>
     <div class="content">
