Actually add keys
Yay

--- a/gkeys.html
+++ b/gkeys.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Github Pages Template</title>
+    <title>Play Services Keys</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 
     <!-- Combo with CSSNormalize, CSSGrids-Responsive, CSSForm, CSSTable, CSSList (v3.9.1) -->
@@ -46,7 +46,7 @@
 <body class='yui3-skin-sam'>
 
     <div id="headerMenu" class="yui3-menu yui3-menu-open yui3-menu-horizontal yui3-menu-fixed">
-        <span class="yui3-menu-heading">PrettyPages</span>
+        <span class="yui3-menu-heading">r3pwn</span>
         <ul>
             <li><a href="http://r3pwn.github.io/">My Blog</a></li>
             <li><a href="https://plus.google.com/+GregWillardr3pwn">My Google+</a></li>
@@ -61,45 +61,39 @@
 
     </div>
     <div class="content">
-        <h2>Get Started</h2>
-        <p><a href="http://github.com/tilomitra/prettypages/">PrettyPages</a> is just an HTML template that makes it easy for you to create nice looking Github Pages for your projects. This page was created using PrettyPages. </p>
-
-        <a href="http://github.com/tilomitra/prettypages/" class="yui3-button primary-button">View on Github</a>
-
-        <h2>About</h2>
-        
-        <p>PrettyPages comes with a flat horizontal menu, where you can place links, and add the title of your project. This menu is responsive at lower screen sizes.</p>
-
-        <p>You can also add pretty code snippets that have syntax highlighting thanks to <a href="http://craig.is/making/rainbows">RainbowJS</a>! These come in a variety of different <a href="https://github.com/ccampbell/rainbow/tree/master/themes">themes</a>.</p>
-
-<pre><code data-language="javascript">
-    YUI().use('node', function(Y) {
-      Y.log('YUI Loaded. Vroom vroom!');
-    });
-
-</code></pre>
-
-        <p>You can also display nice looking buttons thanks to YUI's CSSButton module. Add the <code>.yui3-button</code> class to a <code>a</code> element to make a nice looking button, and add the <code>primary-button</code> class to make a really big callout button.</p>
-
-        <a class="yui3-button">Regular button</a>
-        <a class="yui3-button primary-button">Primary button</a>
-
-
-        <h2>More Content</h2>
-        <p>
-            In general, all your content should be placed inside a <code>div class="content"</code>. You can use <code>code</code> elements to highlight inline-code. If you want sub-headings, those are nicely styled too. 
-        </p>
-
-        <h3>A sub-heading</h3>
-
-        <p>
-            Use <code>h3</code> for subheadings! If you want something smaller, you can go for an <code>h4</code>.
-        </p>
-
-        <h4>A sub-sub heading</h4>
-        <p>That's what an <code>h4</code> looks like.</p>
-
-
+        <h4>I don't test all of these, I just try to get them out as quickly as possible.</h4>
+        <h2>Android Wear 1.0.4.1611133</h2>
+        <p><code>
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:companion_logging_enabled"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:disable_companion_hotword"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:companion_tutorial_youtube_video_id"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:home_logging_enabled"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:time_sync_period_ms"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:time_sync_max_latency_ms"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:default_vibration_pattern"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:disable_unread_ui"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:disable_unread_ranking"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:package_ranking"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:package_ranking_separator"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:package_ranking_unknown_package"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:follow_on_supported_languages"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:follow_on_supported_locales"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:enable_incoming_call_while_charging"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:browse_wear_apps_url"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:enable_multinode_ui"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:notification_time_tracking_write_throttle_ms"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:notification_time_tracking_duration_ms"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:stream_audit_enabled"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:stream_audit_interval_ms"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:stream_audit_log_entry_count"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:stream_audit_failure_count_to_notify"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:notif_sync_stopped_warning_enabled"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:calendar_app_packages"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:battery_notification_high_threshold"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:battery_notification_low_threshold"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:gesture_control_enabled"
+./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:show_mute_actions_on_dismissable_notifications"
+        </code>
         <!-- TYPEKIT -->
         <script type="text/javascript" src="//use.typekit.net/ajf8ggy.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
