--- a/gkeys.html
+++ b/gkeys.html
@@ -63,37 +63,7 @@
     <div class="content">
         <h4>I don't test all of these, I just try to get them out as quickly as possible.</h4>
         <h2>Android Wear 1.0.4.1611133</h2>
-        <p><code>
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:companion_logging_enabled"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:disable_companion_hotword"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:companion_tutorial_youtube_video_id"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:home_logging_enabled"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:time_sync_period_ms"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:time_sync_max_latency_ms"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:default_vibration_pattern"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:disable_unread_ui"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:disable_unread_ranking"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:package_ranking"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:package_ranking_separator"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:package_ranking_unknown_package"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:follow_on_supported_languages"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:follow_on_supported_locales"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:enable_incoming_call_while_charging"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:browse_wear_apps_url"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:enable_multinode_ui"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:notification_time_tracking_write_throttle_ms"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:notification_time_tracking_duration_ms"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:stream_audit_enabled"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:stream_audit_interval_ms"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:stream_audit_log_entry_count"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:stream_audit_failure_count_to_notify"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:notif_sync_stopped_warning_enabled"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:calendar_app_packages"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:battery_notification_high_threshold"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:battery_notification_low_threshold"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:gesture_control_enabled"
-./com/google/android/clockwork/host/GKeys.smali:    const-string v0, "cw:show_mute_actions_on_dismissable_notifications"
-        </code>
+        <p><code>cw:companion_logging_enabled<br>cw:disable_companion_hotword<br>cw:companion_tutorial_youtube_video_id<br>cw:home_logging_enabled<br>cw:time_sync_period_ms<br>cw:time_sync_max_latency_ms<br>cw:default_vibration_pattern<br>cw:disable_unread_ui<br>cw:disable_unread_ranking<br>cw:package_ranking<br>cw:package_ranking_separator<br>cw:package_ranking_unknown_package<br>cw:follow_on_supported_languages<br>cw:follow_on_supported_locales<br>cw:enable_incoming_call_while_charging<br>cw:browse_wear_apps_url<br>cw:enable_multinode_ui<br>cw:notification_time_tracking_write_throttle_ms<br>cw:notification_time_tracking_duration_ms<br>cw:stream_audit_enabled<br>cw:stream_audit_interval_ms<br>cw:stream_audit_log_entry_count<br>cw:stream_audit_failure_count_to_notify<br>cw:notif_sync_stopped_warning_enabled<br>cw:calendar_app_packages<br>cw:battery_notification_high_threshold<br>cw:battery_notification_low_threshold<br>cw:gesture_control_enabled<br>cw:show_mute_actions_on_dismissable_notifications</code>
         <!-- TYPEKIT -->
         <script type="text/javascript" src="//use.typekit.net/ajf8ggy.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
