--- a/sourcemodding.html
+++ b/sourcemodding.html
@@ -53,7 +53,7 @@ Now it's time for the final step. Permissions changing. Hook up your SHIELD via 
 <br>chgrp 5dn */*/*
 <br>chgrp 5dn */*/*/*
 <br>chgrp 5dn */*/*/*/*
-<br>chgrp 5dn */*/*/*/*/*
+<br>chgrp 5dn */*/*/*/*/*<br>
 </i>
 <br>
 <b>(It's okay if one or more of those commands gives an error of "No such file or directory".)</b>
