--- a/gkeys.html
+++ b/gkeys.html
@@ -64,6 +64,138 @@
         <h3>I don't test all of these, I just try to get them out as quickly as possible.</h3>
         <h2>Android Wear 1.0.4.1611133</h2>
         <p><code>cw:companion_logging_enabled<br>cw:disable_companion_hotword<br>cw:companion_tutorial_youtube_video_id<br>cw:home_logging_enabled<br>cw:time_sync_period_ms<br>cw:time_sync_max_latency_ms<br>cw:default_vibration_pattern<br>cw:disable_unread_ui<br>cw:disable_unread_ranking<br>cw:package_ranking<br>cw:package_ranking_separator<br>cw:package_ranking_unknown_package<br>cw:follow_on_supported_languages<br>cw:follow_on_supported_locales<br>cw:enable_incoming_call_while_charging<br>cw:browse_wear_apps_url<br>cw:enable_multinode_ui<br>cw:notification_time_tracking_write_throttle_ms<br>cw:notification_time_tracking_duration_ms<br>cw:stream_audit_enabled<br>cw:stream_audit_interval_ms<br>cw:stream_audit_log_entry_count<br>cw:stream_audit_failure_count_to_notify<br>cw:notif_sync_stopped_warning_enabled<br>cw:calendar_app_packages<br>cw:battery_notification_high_threshold<br>cw:battery_notification_low_threshold<br>cw:gesture_control_enabled<br>cw:show_mute_actions_on_dismissable_notifications</code>
+<p><h2>Google Play Services 6.5.96</h2><p><code>gms:common:allow_pii_logging<br>
+gms:common:system_health_log_delay_after_install_millis<br>
+gms:common:ignored_packages_for_logging<br>
+gms:common:show_people_settings<br>
+gms:common:show_download_settings<br>
+gms:common:enable_auth_proxy_version<br>
+gms:common:lso_server_url<br>
+gms:common:lso_server_api_path<br>
+gms:common:lso_backend_override<br>
+gms:security:enable_conscrypt_in_gms_application<br>
+gms:security:enable_conscrypt_in_auth<br>
+gms:security:enable_conscrypt_in_gcm<br>
+gms:security:enable_conscrypt_in_checkin<br>
+gms:lockbox:policy:disallow_logging_app_usage_country_codes<br>
+gms:playlog:service:debug<br>
+gms:playlog:service:monitoring_interval<br>
+gms:playlog:uploader:debug<br>
+gms:playlog:uploader:debug_allow_http<br>
+gms:playlog:uploader:debug_ignore_response<br>
+gms:playlog:uploader:server_url<br>
+gms:playlog:uploader:auth_token_service<br>
+gms:playlog:uploader:min_schedule_upload_interval_millis<br>
+gms:playlog:uploader:upload_interval_millis<br>
+gms:playlog:uploader:max_redirects<br>
+gms:playlog:uploader:max_log_events_size_bytes<br>
+gms:ads:social:doritos:doritos_url<br>
+gms:ads:social:doritos:min_time_between_requests_ms<br>
+gms:ads:social:doritos:doritos_refresh_period_s<br>
+gms:ads:social:doritos:doritos_refresh_flex_s<br>
+gms:ads:social:doritos:doritos_fast_refresh_flex_s<br>
+gms:ads:social:doritos:doritos_oauth_scope<br>
+gms:ads:ads_preferences_base_url<br>
+gms:app:google_settings_help_url<br>
+gms:app:enable_usage_reporting<br>
+gms:cast:verbose_logging_enabled<br>
+gms:cast:debug_logging_enabled<br>
+gms:cast:dogfood_logging_enabled<br>
+gms:cast:wifi_lock_enabled<br>
+gms:cast:wake_lock_enabled<br>
+gms:cast:wake_lock_max_hold_time<br>
+gms:cast:mirroring_app_id<br>
+gms:cast:remote_display_enabled<br>
+gms:cast:mirroring_enabled<br>
+gms:cast:ambient_state_app_ids<br>
+gms:cast:cast_nearby:is_enabled<br>
+gms:cast:cast_nearby:url<br>
+gms:cast:cast_nearby:wait_for_audio_token_ms<br>
+gms:cast:cast_nearby:max_session_connection_attempts<br>
+gms:cast:cast_nearby:max_bytes_to_read_for_handshake<br>
+gms:cast:cast_nearby:cached_filter_result_expiration_ms<br>
+gms:cast:cast_nearby:is_droidguard_enabled<br>
+gms:cast:cast_nearby:client_auth_cert_expiration_min<br>
+gms:cast:cast_nearby:where_is_the_pin_url<br>
+gms:cast:cast_nearby:remove_if_not_visible_times<br>
+gms:cast:cast_nearby:network_failure_request_retries<br>
+gms:cast:cast_nearby:retry_initial_backoff_ms<br>
+gms:cast:cast_nearby:retry_backoff_increment_ms<br>
+gms:cast:cast_nearby:publish_multiple_routes<br>
+gms:cast:cast_nearby:pin_code_ttl_ms<br>
+gms:cast:mdns_device_scanner:is_enabled<br>
+gms:cast:mdns_device_scanner:refresh_interval_ms<br>
+gms:cast:mdns_device_scanner:initial_time_between_bursts_ms<br>
+gms:cast:mdns_device_scanner:time_between_bursts_ms<br>
+gms:cast:mdns_device_scanner:queries_per_burst<br>
+gms:cast:mdns_device_scanner:queries_per_burst_passive<br>
+gms:cast:mdns_device_scanner:time_between_queries_in_burst_ms<br>
+gms:cast:mdns_device_scanner:record_expiration_interval_ms<br>
+gms:cast:media:video_bitrate<br>
+gms:cast:media:target_delay<br>
+gms:cast:media:generic_player_app_id<br>
+gms:cast:media:use_tdls<br>
+gms:cast:media:stats_flags<br>
+gms:cast:receiver_control_channel:launch_request_timeout_ms<br>
+gms:cast:receiver_control_channel:request_timeout_ms<br>
+gms:cast_mirroring:allow_non_chromecast_app_mirroring<br>
+gms:cast_mirroring:google_cast_package_name<br>
+gms:cast_mirroring:chromecast_mirror_test_app_package_name<br>
+gms:cast:media:stats_flags<br>
+gms:common:download:debug<br>
+gms:common:download:enabled<br>
+gms:common:download:check_interval<br>
+gms:common:download:fraction_free_space_to_download<br>
+gms:common:download:retry_limit<br>
+gms:common:download:check_interval<br>
+gms:common:download:download_json<br>
+gms:feedback:log_line_limit<br>
+gms:feedback:ctl_message_popup<br>
+gms:feedback:ctl_whitelist_package_names<br>
+gms:feedback:ctl_whitelist_report_types<br>
+gms:feedback:enable_suggestions<br>
+gms:feedback:suggestion_whitelist_package_names<br>
+gms:feedback:whitelist_report_types_for_support<br>
+gms:feedback:bitmap_compression_ratio<br>
+gms:feedback:save_screenshot_timeout_millis<br>
+gms:feedback:serve_suggestion_timeout_millis<br>
+gms:feedback:suggestions<br>
+gms:googlehelp:http_scheme<br>
+gms:googlehelp:http_authority<br>
+gms:googlehelp:click_to_call_path<br>
+gms:googlehelp:get_configurations_path<br>
+gms:googlehelp:escalation_options_request_path<br>
+gms:googlehelp:get_query_suggestions_path<br>
+gms:googlehelp:recommendations_request_path<br>
+gms:googlehelp:report_metrics_request_path<br>
+gms:googlehelp:submit_contact_form_request_path<br>
+gms:googlehelp:video_call_request_path<br>
+gms:googlehelp:chat_request_path<br>
+gms:googlehelp:base_url<br>
+gms:googlehelp:hangouts_validate_device_and_app_support<br>
+gms:googlehelp:hangouts_total_num_retries<br>
+gms:googlehelp:video_call_update_delay_ms<br>
+gms:googlehelp:video_call_update_delay_after_ready_ms<br>
+gms:googlehelp:network_timeout_seconds<br>
+gms:googlehelp:ongoing_session_last_stopped_minutes<br>
+gms:lockbox:location:country_code_mcc_mnc_list<br>
+gms:playlog:logstore:debug<br>
+gms:playlog:logstore:max_storage_size_bytes<br>
+gms:playlog:test:test_id<br>
+gms:wearable:service:logging<br>
+gms:wearable:service:override_wearable_app_user_debug_signature<br>
+gms:wearable:service:data_item_size_limit_bytes<br>
+gms:wearable:service:bt_retry_steps<br>
+gms:wearable:service:bt_retry_time_limit<br>
+gms:wearable:service:bt_retry_time_at_limit<br>
+gms:wearable:service:show_bt_retry_notification<br>
+gms:wearable:service:dataitem_gc_interval<br>
+gms:wearable:service:max_write_stuck_time<br>
+gms:wearable:service:max_write_stuck_time_v2<br>
+gms:wearable:service:run_foreground_with_notification<br>
+gms:wearable:service:reboot_delay_millis<br>
+gms:wearable:service:reboot_lollipop
+</code>
         <!-- TYPEKIT -->
         <script type="text/javascript" src="//use.typekit.net/ajf8ggy.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
