--- a/gkeys.html
+++ b/gkeys.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/combo?3.9.1/build/cssnormalize/cssnormalize-min.css&amp;3.9.1/build/cssgrids-responsive/cssgrids-responsive-min.css&amp;3.9.1/build/cssbutton/cssbutton-min.css&amp;gallery-2013.03.27-22-06/build/gallerycss-csslist/gallerycss-csslist-min.css&amp;gallery-2013.03.27-22-06/build/gallerycss-csstable/gallerycss-csstable-min.css&amp;gallery-2013.03.27-22-06/build/gallerycss-cssform/gallerycss-cssform-min.css">
     
     <!-- Some custom styles to make things pretty. -->
-    <link rel="stylesheet" type="text/css" href="https://rawgithub.com/tilomitra/prettypages/gh-pages/ui.css">
+    <link rel="stylesheet" type="text/css" href="css/ui.css">
 
     <!-- RainbowJS Syntax Highlighting - Github Theme. 
          For more themes, go to https://github.com/ccampbell/rainbow/tree/master/themes -->
@@ -29,10 +29,10 @@
     <style>
         
         .header {
-            background: rgb(25, 25, 117);
+            background: rgb(0, 150, 136);
          }
             .header h1 {
-                color: rgb(255, 209, 25);
+                color: rgb(255, 255, 255);
             }
              .header h2 {
                  font-weight:300;
@@ -46,7 +46,7 @@
 <body class='yui3-skin-sam'>
 
     <div id="headerMenu" class="yui3-menu yui3-menu-open yui3-menu-horizontal yui3-menu-fixed">
-        <span class="yui3-menu-heading">r3pwn</span>
+        <span class="yui3-menu-heading"><font color="white">r3pwn</font></span>
         <ul>
             <li><a href="http://r3pwn.github.io/">My Blog</a></li>
             <li><a href="https://plus.google.com/+GregWillardr3pwn">My Google+</a></li>
