--- a/yt-exoplayer.html
+++ b/yt-exoplayer.html
@@ -73,8 +73,8 @@
 		<code>	&lt;string name="exo_player_activation_type"&gt;ADAPTIVE&lt;/string&gt;<br>
 	&lt;boolean name="enable_exo_cache" value="true"/&gt;<br>
 	&lt;boolean name="show_exo_player_debug_messages" value="true"/&gt;</code></p>
-		<h3>Step three: Force-Close YouTube</h3><br>
-		<h3>Step four: Enjoy ExoPlayer!</h3>
+		<h3>Step three: Force-Close YouTube<br>
+		Step four: Enjoy ExoPlayer!</h3>
 		<!-- TYPEKIT -->
         <script type="text/javascript" src="//use.typekit.net/ajf8ggy.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
