--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- RainbowJS Syntax Highlighting - Github Theme. 
          For more themes, go to https://github.com/ccampbell/rainbow/tree/master/themes -->
-    <link rel="stylesheet" type="text/css" href="https://rawgithub.com/ccampbell/rainbow/master/themes/github.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ccampbell/rainbow/master/themes/github.css">
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
