--- a/3dshax.html
+++ b/3dshax.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<!-- Original source from http://go.gateway-3ds.com/ --/>
+<!-- Original source from http://go.gateway-3ds.com/ -->
 <style>
 	body {
 		color:white;
