--- a/hidden/clickjack.html
+++ b/hidden/clickjack.html
@@ -25,6 +25,6 @@
     </style>
   </head>
   <body>
-    <iframe src="https://hackerone.com/bugs?subject=user&report_id=0&view=pending_disclosure" height="700" width="1000"></iframe>
+    <iframe src="https://gradebook.collier.k12.fl.us/default.asp" height="700" width="1000"></iframe>
   </body>
 </html>
