--- a/hidden/clickjack.html
+++ b/hidden/clickjack.html
@@ -25,6 +25,6 @@
     </style>
   </head>
   <body>
-    <iframe src="https://www.instagram.com/accounts/edit/" height="700" width="1000"></iframe>
+    <iframe src="https://squareup.com/login" height="700" width="1000"></iframe>
   </body>
 </html>
